# htmldemo

./: README.md  app.py  demo -backup.html  demo-backup.html  demo-plain.html  demo-plain2styling.html  demo.html  pyproject.toml
static/: demo-plain.html  demo-plain2styling.html  demo.html
templates/: index.html
